# fetch-one-bug

./: Cargo.toml  README.md
src/: create_table_posts.sql  create_table_user.sql  insert_returning.sql  main.rs
src/tables/: local.txt  test.txt  test_post.txt
