[package]
name = "fetch-one-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
geo-types = "0.7.9"
geozero = { version = "0.9.9", features = ["with-postgis-sqlx"] }
rust_decimal = "1.29.1"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "decimal"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = "1.3.3"
